Bug 303054 - Backgrounds pixelated
Summary: Backgrounds pixelated
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: T Zachmann
URL: http://wstaw.org/m/2012/07/05/plasma-...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-05 10:44 UTC by Jussi Schultink
Modified: 2012-07-06 17:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jussi Schultink 2012-07-05 10:44:15 UTC
Opened a presentation that works fine in LO and the backgrounds are all fuzzy/pixelated.

Reproducible: Always

Steps to Reproduce:
1. Open presentation that is attached in calligra stage. 
2.
3.
Actual Results:  
Pixelated Backgrounds.

Expected Results:  
Clear backgrounds
Comment 1 Jussi Schultink 2012-07-05 10:46:21 UTC
http://jussi01.com/upload/uploads/20120705-104555-calligraproblem.odp for doc to reproduce.
Comment 2 Camilla Boemann 2012-07-05 10:49:26 UTC
I can confirm
Comment 3 T Zachmann 2012-07-06 17:23:31 UTC
Git commit f1003bd710c27bc79af1b739c1e2ae352cfeb84f by Thorsten Zachmann.
Committed on 06/07/2012 at 19:19.
Pushed by zachmann into branch 'master'.

Improve painting of stretched pattern background

For page backgrounds it happens that the image gets shown quite badly when stretch
mode is used. See bug. When tesing the fix I found out that this effects quite a
lot presentations. Not all as bad as in the bug report. With the patch all the images
improve nicely.
Problem was that the images generated for the pattern background did not generate a
image as big as needed but some fixed one that resulted in not so good looking background
images.

The patch is quite big as 2 new parameters (KoViewConverter and KoShapePaintingContext)
are added to the KoShapeBackground::paint method. The KoShapePaintingContext is not yet
used but this is needed for animations in stage that change the background color and as
I was already at it I added it too.
REVIEW: 105458

M  +5    -1    karbon/ui/widgets/KarbonSmallStylePreview.cpp
M  +6    -6    kexi/plugins/shapes/relationdesign/kexirelationdesignshape.cpp
M  +2    -2    kexi/plugins/shapes/relationdesign/kexirelationdesignshape.h
M  +1    -1    libs/flake/KoColorBackground.cpp
M  +1    -1    libs/flake/KoColorBackground.h
M  +1    -1    libs/flake/KoGradientBackground.cpp
M  +1    -1    libs/flake/KoGradientBackground.h
M  +1    -1    libs/flake/KoOdfGradientBackground.cpp
M  +2    -2    libs/flake/KoOdfGradientBackground.h
M  +2    -2    libs/flake/KoPathShape.cpp
M  +1    -1    libs/flake/KoPathShape.h
M  +11   -4    libs/flake/KoPatternBackground.cpp
M  +1    -1    libs/flake/KoPatternBackground.h
M  +3    -1    libs/flake/KoShapeBackground.h
M  +1    -1    libs/flake/KoShapeManager.cpp
M  +2    -2    libs/flake/KoUnavailShape.cpp
M  +1    -1    libs/flake/KoUnavailShape.h
M  +5    -1    libs/flake/tests/TestShapeBackgroundCommand.cpp
M  +3    -1    libs/kopageapp/KoPAMasterPage.cpp
M  +6    -4    libs/kopageapp/KoPAPage.cpp
M  +1    -1    libs/kopageapp/KoPAPage.h
M  +2    -2    libs/kopageapp/KoPAPageBase.cpp
M  +1    -1    libs/kopageapp/KoPAPageBase.h
M  +3    -1    libs/kopageapp/KoPAViewModeNormal.cpp
M  +2    -2    plugins/artistictextshape/ArtisticTextShape.cpp
M  +1    -1    plugins/artistictextshape/ArtisticTextShape.h
M  +2    -2    plugins/chartshape/ChartShape.cpp
M  +2    -2    plugins/chartshape/Legend.cpp
M  +2    -2    plugins/chartshape/PlotArea.cpp
M  +5    -1    plugins/dockers/styledocker/StylePreview.cpp
M  +1    -1    plugins/textshape/TextShape.cpp
M  +3    -1    stage/part/KPrAnimationDirector.cpp
M  +2    -2    words/part/frames/KWFrameLayout.cpp

http://commits.kde.org/calligra/f1003bd710c27bc79af1b739c1e2ae352cfeb84f
Comment 4 T Zachmann 2012-07-06 17:26:04 UTC
Git commit 96dcc1ea759fb84dafed9f29dba4b83c2fcb0645 by Thorsten Zachmann.
Committed on 06/07/2012 at 19:19.
Pushed by zachmann into branch 'calligra/2.5'.

Improve painting of stretched pattern background

For page backgrounds it happens that the image gets shown quite badly when stretch
mode is used. See bug. When tesing the fix I found out that this effects quite a
lot presentations. Not all as bad as in the bug report. With the patch all the images
improve nicely.
Problem was that the images generated for the pattern background did not generate a
image as big as needed but some fixed one that resulted in not so good looking background
images.

The patch is quite big as 2 new parameters (KoViewConverter and KoShapePaintingContext)
are added to the KoShapeBackground::paint method. The KoShapePaintingContext is not yet
used but this is needed for animations in stage that change the background color and as
I was already at it I added it too.
REVIEW: 105458
(cherry picked from commit f1003bd710c27bc79af1b739c1e2ae352cfeb84f)

M  +5    -1    karbon/ui/widgets/KarbonSmallStylePreview.cpp
M  +6    -6    kexi/plugins/shapes/relationdesign/kexirelationdesignshape.cpp
M  +2    -2    kexi/plugins/shapes/relationdesign/kexirelationdesignshape.h
M  +1    -1    libs/flake/KoColorBackground.cpp
M  +1    -1    libs/flake/KoColorBackground.h
M  +1    -1    libs/flake/KoGradientBackground.cpp
M  +1    -1    libs/flake/KoGradientBackground.h
M  +1    -1    libs/flake/KoOdfGradientBackground.cpp
M  +2    -2    libs/flake/KoOdfGradientBackground.h
M  +2    -2    libs/flake/KoPathShape.cpp
M  +1    -1    libs/flake/KoPathShape.h
M  +11   -4    libs/flake/KoPatternBackground.cpp
M  +1    -1    libs/flake/KoPatternBackground.h
M  +3    -1    libs/flake/KoShapeBackground.h
M  +1    -1    libs/flake/KoShapeManager.cpp
M  +2    -2    libs/flake/KoUnavailShape.cpp
M  +1    -1    libs/flake/KoUnavailShape.h
M  +5    -1    libs/flake/tests/TestShapeBackgroundCommand.cpp
M  +3    -1    libs/kopageapp/KoPAMasterPage.cpp
M  +6    -4    libs/kopageapp/KoPAPage.cpp
M  +1    -1    libs/kopageapp/KoPAPage.h
M  +2    -2    libs/kopageapp/KoPAPageBase.cpp
M  +1    -1    libs/kopageapp/KoPAPageBase.h
M  +3    -1    libs/kopageapp/KoPAViewModeNormal.cpp
M  +2    -2    plugins/artistictextshape/ArtisticTextShape.cpp
M  +1    -1    plugins/artistictextshape/ArtisticTextShape.h
M  +2    -2    plugins/chartshape/ChartShape.cpp
M  +2    -2    plugins/chartshape/Legend.cpp
M  +2    -2    plugins/chartshape/PlotArea.cpp
M  +5    -1    plugins/dockers/styledocker/StylePreview.cpp
M  +1    -1    plugins/textshape/TextShape.cpp
M  +3    -1    stage/part/KPrAnimationDirector.cpp
M  +2    -2    words/part/frames/KWFrameLayout.cpp

http://commits.kde.org/calligra/96dcc1ea759fb84dafed9f29dba4b83c2fcb0645