Improve painting of stretched pattern background

For page backgrounds it happens that the image gets shown quite badly when stretch
mode is used. See bug. When tesing the fix I found out that this effects quite a
lot presentations. Not all as bad as in the bug report. With the patch all the images
improve nicely.
Problem was that the images generated for the pattern background did not generate a
image as big as needed but some fixed one that resulted in not so good looking background
images.

The patch is quite big as 2 new parameters (KoViewConverter and KoShapePaintingContext)
are added to the KoShapeBackground::paint method. The KoShapePaintingContext is not yet
used but this is needed for animations in stage that change the background color and as
I was already at it I added it too.

BUG: 303054
REVIEW: 105458